<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BMI</string>
    <string name="btn_calc">Calculate</string>
    <string name="btn_return">Return</string>
    <string name="hintWeight">Weight</string>
    <string name="hintHeight">Height</string>
    <string name="txt_Info">Info</string>
    <string name="txt_Diagnosis">Diagnosis</string>

    <string name="diagUndw">Underweight</string>
    <string name="diagNormal">Normal</string>
    <string name="diagOvw">Overweight</string>
    <string name="diagObese">Obesity</string>

    <string name="err_empty_weight">Enter your weight</string>
    <string name="err_height_empty">Enter your height</string>

    <string name="height_text">Height: </string>
    <string name="weight_text"> / Weight: </string>

    <string name="toast_done">Valid data</string>
    <string name="toast_return" tools:ignore="TypographyEllipsis">Returning...</string>
    <string name="inches">Inches</string>
    <string name="feet">Feet</string>
    <string name="pounds">Pounds</string>
    <string name="imperial_system">Imperial System</string>
    <string name="err_empty_feet">Enter height in feet</string>
    <string name="err_empty_inches">Enter height in inches</string>
    <string name="err_empty_pounds">Enter weight in pounds</string>
    <string name="decimal_system">Metric System</string>
</resources>
